# RustedAverno

./: Cargo.toml
client/: Cargo.toml
client/src/: gui.rs  main.rs  network.rs
server/: Cargo.toml
server/src/: db.rs  hasher.rs  main.rs  network.rs
shared/: Cargo.toml
shared/src/: lib.rs  network.rs
