[workspace]
members = [
    "client", "common",
    "server",
]

resolver = "3"


[workspace.dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
game-networking-sockets = "0.1"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
common = {path = "./common/"}