[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib = "5.5"
game-networking-sockets = {workspace = true}
serde_json = {workspace = true}
bincode = {workspace = true}
serde = {workspace = true}
common = {workspace = true}
tokio = {workspace = true}
anyhow = "1.0.100"
log = "0.4.28"
