[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
game-networking-sockets = "0.1"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15"
argon2 = "0.4"
password-hash = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"