[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
game-networking-sockets = {workspace = true}
tokio = {workspace = true}
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15"
argon2 = "0.4"
password-hash = "0.4"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
common = {workspace = true}
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8.5"
deadpool-postgres = "0.14.1"
tokio-postgres = "0.7.15"
